# dinosoft-docs

./: .gitignore  404.html  LEARNING.md  README.md  about.md  api.md  code.md  first.md  index.html  index.md  mkdocs.yml  pyproject.toml  tasks.md  trythis.md
dinosoft/: README.md  __init__.py  __main__.py  analysis.py  data.py  models.py
docs/: examples.md  explanation.md  how-to.md  index.md  quickstart.md  reference.md  tutorial.md
examples/: index.html
explanation/: index.html
how-to/: index.html
quickstart/: index.html
reference/: index.html
search/: search_index.json
tests/: test_dinosoft.py
tutorial/: index.html
